k8slab/k8s_lab/postgresql/pgadmin/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: postgresql
    component: pgadmin
    instance: fi862
  name: fi862-postgresql-pgadmin
spec:
  selector:
    matchLabels:
      app: postgresql
      component: pgadmin
      instance: fi862
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
        component: pgadmin
        instance: fi862
    spec:
      containers:
        - name: postgresql-pgadmin
          image: "dpage/pgadmin4"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: pgadmin
              containerPort: 5050
          volumeMounts:
            - name: servers-volume
              mountPath: "/pgadmin4/servers.json"
              subPath: "servers.json"
            - name: storage-volume
              mountPath: "/var/lib/pgadmin"
      volumes:
        - name: servers-volume
          configMap:
            name: fi862-postgresql-pgadmin
        - name: storage-volume
          persistentVolumeClaim:
            claimName: fi862-postgresql-pgadmin
