k8slab/k8s_lab/postgresql/pgadmin/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fi862-postgresql-pgadmin
  labels:
    app: postgresql
    component: pgadmin
    instance: fi862
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: pgadmin
  selector:
    app: postgresql
    component: pgadmin
    instance: fi862
